add favicon and styles

--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="fontello-557c01cd/css/fontello.css" type="text/css" />
     <title>Villa Banska</title>
+    <link rel="shortcut icon" type="image/png" href="images/favicon-16x16.png"/>
+    <!--
+        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="shortcut icon" type="image/png" href="images/favicon-16x16.png"/>
+    -->
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap&subset=latin-ext" rel="stylesheet">
 </head>
 
 <body>
-	<h1><i>Villa Bańska</i></h1>
+    
+    <h1><i>Villa Bańska</i></h1>
+    <article>
     <img src="images/pic1_widokz okna.jpg" alt="Widok z okna">
     <div class="social-media">
         <br/><br/><br/>
@@ -23,6 +30,7 @@
         <div><a href="https://www.instagram.com/villabanska/" target="_blank" class="sociallink"><i class="demo-icon icon-instagram-filled"></i></a> </div> <br/>
     </div>
 	<p><i>Bądź cierpliwy, ta strona jest dopiero w budowie :)</i></p>
+    </article>
 </body>
 </html>
 
