--- a/index.html
+++ b/index.html
@@ -11,16 +11,23 @@
     <link rel="stylesheet" href="fontello-557c01cd/css/fontello.css" type="text/css" />
     <title>Villa Banska</title>
     <link rel="shortcut icon" type="image/png" href="images/favicon-16x16.png"/>
-    <!--
-        <link rel="shortcut icon" href="favicon.ico">
-        <link rel="shortcut icon" type="image/png" href="images/favicon-16x16.png"/>
-    -->
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap&subset=latin-ext" rel="stylesheet">
 </head>
 
 <body>
     
     <h1><i>Villa Bańska</i></h1>
+    <nav class="navigation">
+        <ul class="menu-list">
+            <li><a href=work.html>Strona Główna</a></li>
+            <li><a href=work.html>O nas</a></li>
+            <li><a href=work.html>Nasza oferta</a></li>
+            <li><a href=work.html>Pokoje</a></li>
+            <li><a href=work.html>Rezerwacje</a></li>
+            <li><a href=work.html>Kontakt</a></li>
+        </ul>
+    </nav>
+
     <article>
     <img src="images/pic1_widokz okna.jpg" alt="Widok z okna">
     <div class="social-media">
